// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feeHash is empty object 1`] = `
<div
  className="flex-100 layout-row layout-align-space-around-center  incoterm_wrapper"
>
  <div
    className="fee_tile flex-none layout-row layout-align-space-around-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center "
    >
      <i
        className="fa fa-id-card clip flex-none"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, rgb(0, 0, 0),rgb(25, 25, 25))",
            "opacity": "0.5",
          }
        }
      />
    </div>
    <div
      className="flex layout-row layout-align-center-space-around layout-wrap"
    >
      <div
        className="fee_text flex-100 layout-row layout-align-center-center "
      >
        <h4
          className="flex-none no_m"
        >
          Customs
        </h4>
      </div>
      <div
        className="fee_value flex-none width_100 layout-row layout-align-center-center layout-wrap"
      >
        <p
          className="flex-none no_m center"
        >
          None
        </p>
      </div>
    </div>
  </div>
  <div
    className="fee_tile flex-none layout-row layout-align-space-around-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center "
    >
      <i
        className="fa fa-umbrella clip flex-none"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, rgb(0, 0, 0),rgb(25, 25, 25))",
            "opacity": "0.5",
          }
        }
      />
    </div>
    <div
      className="flex layout-row layout-align-center-space-around layout-wrap"
    >
      <div
        className="fee_text flex-100 layout-row layout-align-center-center "
      >
        <h4
          className="flex-none no_m"
        >
          Insurance
        </h4>
      </div>
      <div
        className="fee_value flex-none width_100 layout-row layout-align-center-center layout-wrap"
      >
        <p
          className="flex-none no_m center"
        >
          None
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-align-space-around-center  incoterm_wrapper"
>
  <div
    className="fee_tile flex-none layout-row layout-align-space-around-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center "
    >
      <i
        className="fa fa-id-card clip flex-none"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex layout-row layout-align-center-space-around layout-wrap"
    >
      <div
        className="fee_text flex-100 layout-row layout-align-center-center "
      >
        <h4
          className="flex-none no_m"
        >
          Customs
        </h4>
      </div>
      <div
        className="fee_value flex-none width_100 layout-row layout-align-center-center layout-wrap"
      >
        <p
          className="flex-none no_m center"
        >
          EUR
        </p>
        <p
          className="flex-none no_m center"
        >
          12.00
        </p>
      </div>
    </div>
  </div>
  <div
    className="fee_tile flex-none layout-row layout-align-space-around-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center "
    >
      <i
        className="fa fa-umbrella clip flex-none"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex layout-row layout-align-center-space-around layout-wrap"
    >
      <div
        className="fee_text flex-100 layout-row layout-align-center-center "
      >
        <h4
          className="flex-none no_m"
        >
          Insurance
        </h4>
      </div>
      <div
        className="fee_value flex-none width_100 layout-row layout-align-center-center layout-wrap"
      >
        <p>
           
        </p>
        <p
          className="flex-none no_m center"
        >
          None
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`tenant.scope is empty object 1`] = `
<div
  className="flex-100 layout-row layout-align-space-around-center  incoterm_wrapper"
/>
`;
